log
Wed Mar 25 03:14:13 AM UTC 2026: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/60
0f85a63
Wed Mar 25 03:37:45 AM UTC 2026: 
 list.c | 13 +++++++------
 1 file changed, 7 insertions(+), 6 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
e8b8a66
Fri Mar 27 01:52:44 AM UTC 2026: 
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
776d732
Fri Mar 27 01:57:17 AM UTC 2026: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
8df99e1
Fri Mar 27 02:03:17 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
55be519
Fri Mar 27 02:04:00 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
c5a0816
Fri Mar 27 02:04:15 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c:52:1: error: "/*" within comment [-Werror=comment]
   52 | /*
cc1: all warnings being treated as errors
6fd56bd
Fri Mar 27 02:04:42 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /tmp/ccJzfopD.o: in function `test_first_next':
/home/runner/workspace/test.c:101:(.text+0xb71): undefined reference to `firstList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:122:(.text+0xbd6): undefined reference to `firstList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:133:(.text+0xc19): undefined reference to `nextList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:151:(.text+0xc73): undefined reference to `nextList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:161:(.text+0xca4): undefined reference to `nextList'
collect2: error: ld returned 1 exit status
c02c8e5
Fri Mar 27 02:05:09 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /tmp/ccIzpyp6.o: in function `test_first_next':
/home/runner/workspace/test.c:101:(.text+0xba1): undefined reference to `firstList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:122:(.text+0xc06): undefined reference to `firstList'
collect2: error: ld returned 1 exit status
a6c35e0
Fri Mar 27 02:05:32 AM UTC 2026: 
 list.c | 6 +++---
 1 file changed, 3 insertions(+), 3 deletions(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
36feb83
Fri Mar 27 02:06:32 AM UTC 2026: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
5640d06
Fri Mar 27 02:09:31 AM UTC 2026: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
Compilation failed
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /tmp/ccjvn50q.o: in function `test_first_next':
/home/runner/workspace/test.c:133:(.text+0xc39): undefined reference to `nextList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:151:(.text+0xc93): undefined reference to `nextList'
/nix/store/mkvc0lnnpmi604rqsjdlv1pmhr638nbd-binutils-2.44/bin/ld: /home/runner/workspace/test.c:161:(.text+0xcc4): undefined reference to `nextList'
collect2: error: ld returned 1 exit status
29d1ace
Fri Mar 27 02:09:41 AM UTC 2026: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 20/60
8e4accb
Fri Mar 27 02:10:42 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:51:1: error: control reaches end of non-void function [-Werror=return-type]
   51 | }
      | ^
cc1: all warnings being treated as errors
2aef26f
Fri Mar 27 02:11:22 AM UTC 2026: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 20/60
09e8197
Fri Mar 27 02:17:55 AM UTC 2026: 
 list.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:
list.c: In function ‘lastList’:
list.c:67:5: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   67 |     Nodo * aux = list->head;
      |     ^~~~
      |     Node
list.c:67:18: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Wincompatible-pointer-types]
   67 |     Nodo * aux = list->head;
      |                  ^~~~
list.c:68:14: error: request for member ‘next’ in something not a structure or union
   68 |     while(aux->next != NULL){
      |              ^~
list.c:69:18: error: request for member ‘next’ in something not a structure or union
   69 |         aux = aux->next;
      |                  ^~
list.c:71:24: error: request for member ‘next’ in something not a structure or union
   71 |     list->current = aux->next;
      |                        ^~
156131d
